--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Wheelchat">
+        android:theme="@style/Theme.Wheelchat"
+        android:name=".MainApplication">
+        <activity
+            android:name=".ui.activity.auth.LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.activity.auth.RegisterActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.activity.MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.activity.SplashScreenActivity"
+            android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
