--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -57,8 +58,8 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
-    // Glide image
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    // Picasso image
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Koin core features
     implementation "io.insert-koin:koin-android:3.1.3"
@@ -66,11 +67,14 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:29.0.1')
     implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
-    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
 
     //Circle Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Google Material
+    implementation 'com.google.android.material:material:1.2.0'
 
 
 }
