--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,12 @@
     package="com.juniverse.wheelchat">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:name=".MainApplication"
@@ -15,16 +19,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wheelchat">
         <activity
-            android:name=".ui.activity.ProfileActivity"
+            android:name=".ui.activity.ChatLogActivity"
+            android:exported="true"
+            />
+        <activity
+            android:name=".ui.activity.home.ProfileActivity"
             android:exported="true" />
         <activity
             android:name=".ui.activity.auth.LoginActivity"
-            android:exported="true" />
+            android:exported="true"
+            />
         <activity
             android:name=".ui.activity.auth.RegisterActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.activity.home.MainActivity"
             android:exported="true" />
         <activity
             android:name=".ui.activity.SplashScreenActivity"
