--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wheelchat">
         <activity
-            android:name=".ui.activity.ChatLogActivity"
-            android:exported="true"
-            />
+            android:name=".ui.activity.edit.WheelChatActivity"
+            android:exported="true" />
         <activity
-            android:name=".ui.activity.home.ProfileActivity"
+            android:name=".ui.activity.ChatLogActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.activity.edit.ProfileActivity"
             android:exported="true" />
         <activity
             android:name=".ui.activity.auth.LoginActivity"
-            android:exported="true"
-            />
+            android:exported="true" />
         <activity
             android:name=".ui.activity.auth.RegisterActivity"
             android:exported="true" />
