--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Wheelchat">
+        android:theme="@style/Theme.Wheelchat"
+        >
         <activity
             android:name=".ui.activity.edit.WheelChatActivity"
             android:exported="true" />
